[FIX] web_editor: fix sidebar overflow issue
Steps to Reproduce:

- Set the Odoo backend language to Spanish.
- Enter edit mode.
- Drag and drop the "Text-Image" snippet.
- Click on the image within the dropped snippet.
Bug: The "Layout" menu in the sidebar overflows, causing a horizontal
scrollbar.

Issue:
The width of the `we-button` elements within the `we-button-group`
was not handled correctly. In the Spanish translation, the text in the
"Layout" options was too long, resulting in overflow and a horizontal
scrollbar in the sidebar.

Solution:
This commit addresses the layout issue specifically for DOM structure
involving `we-button-group` and `we-select`. Without affecting other
styles, it applies a grid template to equally divide the available space
among the buttons, preventing overflow.

task-4378522

closes odoo/odoo#189856

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -1615,6 +1615,14 @@
                     font-weight: 600;
                 }
             }
+            // For layout having button-group + we-select, to avoid the long
+            // text to overflow the row.
+            &:has(div > we-button-group + we-select.o_grid) {
+                we-button-group we-selection-items {
+                    display: grid !important;
+                    grid-template-columns: auto auto;
+                }
+            }
         }
 
         %o-we-inline {
